# DF26-NeuroFlow

./: .gitignore  API_DASHBOARD_README.md  AUDIT_REPORT.md  COST_MODEL_SELECTION.md  DASHBOARD_GUIDE.md  DELIVERY_COMPLETE.md  DEMO_QUICKSTART.md  GETTING_STARTED.md  HYBRID_DEPLOYMENT.md  HYBRID_IMPLEMENTATION_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_DEMO.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PRODUCTION_README.md  QUICKSTART.sh  QUICK_REFERENCE.md  QUICK_SUMMARY.md  README.md  README_DEMO.md  REFACTORING_PLAN.md  SLA_VIOLATIONS_FIX.md  START_HERE.md  WORKSPACE_CLEANUP.py  api_server.py  collector.py  dashboard_demo.py  docker-compose.yml  eda.ipynb  eda_analysis.ipynb  infer.py  main.py  pre_process.ipynb  pyproject.toml  requirements.txt  run_hybrid_pipeline.py  run_pipeline.py  server_tracker.py  simulate.py  test_api.py  (+1 more)
ARCHIVE/: README.md
Hybrid_Model (Prophet + LSTM)/: hybrid_15m_predictions.csv  hybrid_5m_predictions.csv  lstm_5m_residual_predictions.csv  train_hybrid_prophet_lstm.ipynb  train_prophet.ipynb
LightGBM/: lightgbm_1m_predictions.csv  lightgbm_5m_model.txt  train_lightGBM.ipynb
XGBoost_Model/: igt.code-workspace  train_xgboost.ipynb  xgboost_15m_importance.csv  xgboost_15m_model.json  xgboost_1m_importance.csv  xgboost_5m_predictions.csv  xgboost_test_predictions.csv
anomaly/: anomaly_detection.py  simulate_anomaly.py  synthetic_ddos_generator.py
app/: app.py
autoscaling/: cpu_based.py  hybrid.py  hybrid_optimized.py  hysteresis.py  objective.py  predictive.py  reactive.py  scenarios.py
configs/: train_config.yaml
(+235 files in other folders)
